# hookwise

./: .gitignore  .releaserc.json  CLAUDE.md  Cargo.toml  GEMINI.md  gemini-extension.json
.captain-hook/: roles.yml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release-semantic.yml  release.yml
commands/captain-hook/: disable.toml  enable.toml  register.toml  status.toml  switch.toml
docs/: jcode-plugin-brainstorm.md
docs/plans/: 2026-02-09-gemini-extension-design.md  2026-02-10-category-path-mapping-design.md
hooks/: gemini-hooks.json
scripts/: e2e-test.sh  update-version.sh
src/: hook_io.rs  lib.rs  main.rs
src/cascade/: human.rs  mod.rs  path_policy.rs  supervisor.rs
src/cli/: check.rs  init.rs  mcp_server.rs  mod.rs  self_update.rs  session_check.rs
src/config/: roles.rs
tests/: cascade_integration.rs  category_tests.rs
