[package]
name = "hookwise"
version = "1.0.5"
edition = "2021"
description = "Intelligent permission gating for AI coding assistants"
license = "MIT"
repository = "https://github.com/Epiphytic/hookwise"
keywords = ["claude-code", "gemini-cli", "permission", "hooks", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
aho-corasick = "1"
regex = "1"
globset = "0.4"
dashmap = "6"
fastembed = "5"
instant-distance = "0.6"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
libc = "0.2"
rmcp = { version = "0.14", features = ["server", "macros", "transport-io"] }
schemars = "1"
flate2 = "1"
tar = "0.4"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
